--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "connect-timeout": "^1.9.0",
     "cookie-parser": "~1.4.3",
     "cron": "^1.6.0",
-    "debug": "~2.2.0",
+    "debug": ">=2.6.9",
     "express": "~4.14.0",
     "express-busboy": "^4.0.0",
     "express-rate-limit": "^2.11.0",
@@ -30,7 +30,7 @@
     "moment": "^2.22.2",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.1.0",
-    "morgan": "~1.7.0",
+    "morgan": ">1.9.1",
     "morgan-body": "^2.4.0",
     "node-statsd": "^0.1.1",
     "nodemailer": "^4.6.5",
