--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "node ./bin/run",
     "test": "export TEST=1; ./node_modules/mocha/bin/mocha --timeout 10000 --exit",
     "test_debug": "export TEST=1; ./node_modules/mocha/bin/mocha debug --timeout 10000 --exit",
-    "test_coverage": "./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha --timeout 10000 --exit"
+    "test_coverage": "export TEST=1; ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha --timeout 10000 --exit"
   },
   "dependencies": {
     "@grpc/proto-loader": "^0.4.0",
@@ -30,7 +30,7 @@
     "moment": "^2.22.2",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.1.0",
-    "morgan": ">1.9.1",
+    "morgan": ">=1.9.1",
     "morgan-body": "^2.4.0",
     "node-statsd": "^0.1.1",
     "nodemailer": "^4.6.5",
